--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,10 @@ crate-type = ["lib"]
 [build-dependencies]
 j4rs       = "0.20.0"
 [dependencies]
+hex        = "0.4.3"
 j4rs       = "0.20.0"
 log        = "0.4.0"
+rand       = "0.8.5"
 
 [dev-dependencies]
 env_logger = "0.11.5"
