--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ crate-type = ["lib"]
 [build-dependencies]
 j4rs       = "0.20.0"
 [dependencies]
+ctrlc      = "3.4"
+env_logger = "0.11.5"
 hex        = "0.4.3"
 j4rs       = "0.20.0"
 log        = "0.4.0"
