--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,6 @@ jobs:
         rustup toolchain install nightly
         sudo apt install ant gettext
         cd i2p && ant buildRouter buildI2PTunnelJars buildSAM jbigi buildAddressbook
-        mkdir -p /tmp/opt/j4-i2p-rs/jassets && cp build/* /tmp/opt/j4-i2p-rs/jassets/
+        mkdir -p ../opt/j4-i2p-rs/jassets && cp build/* ../opt/j4-i2p-rs/jassets/
     - name: build, clippy and test
       run: RUSTFLAGS="-Z threads=4" cargo +nightly build --future-incompat-report && cargo clippy && cargo test
